fixes for deployment

--- a/src/app/user-auth-form.component.html
+++ b/src/app/user-auth-form.component.html
@@ -17,6 +17,8 @@
 				<button type="submit" class="btn btn-success">Sign Up</button>
 			</form>
 			<button type="button" class="btn btn-success" (click)="onC()">Get Profile</button>
+			{{creating_new}}
+			<button type="button" class="btn btn-success" (click)="changeNew()">Change</button>
 		</div>
 	</div>
 </div>
