--- a/src/app/user-detail.component.html
+++ b/src/app/user-detail.component.html
@@ -1,11 +1,6 @@
 <div class="col-md-8" *ngIf="user">
-	<h1>{{user.username}}</h1>
+	<h1>Username: {{user.username}}</h1>
 	<h3> Wins - Losses - Draws</h3>
 	<h3>{{user.wins}} - {{user.losses}} - {{user.draws}}</h3>
 	<button type="button" class="btn btn-primary" (click)="joinQueue()">Find Match</button>
 </div>
-
-<div class="col-md-4" *ngIf="in_queue">
-	<h3>Queueing.  Please remain on this page!</h3>
-</div>
-<ngbd-modal-component></ngbd-modal-component>
